major - support multi update #4, enhance ui to update title