@@ -2,10 +2,10 @@ package testGit.actions;
 
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
-import com.intellij.openapi.actionSystem.CustomShortcutSet;
 import com.intellij.openapi.editor.*;
 import com.intellij.openapi.editor.colors.ColorKey;
 import com.intellij.openapi.editor.colors.EditorColors;
+import com.intellij.openapi.editor.colors.EditorColorsScheme;
 import com.intellij.openapi.editor.colors.EditorFontType;
 import com.intellij.openapi.editor.ex.EditorEx;
 import com.intellij.openapi.project.DumbAwareAction;
@@ -16,6 +16,7 @@ import com.intellij.openapi.ui.popup.JBPopupListener;
 import com.intellij.openapi.ui.popup.LightweightWindowEvent;
 import com.intellij.ui.components.JBList;
 import com.intellij.util.ui.JBUI;
+import lombok.Getter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import testGit.pojo.Config;
@@ -60,7 +61,6 @@ public class EditTestCase extends DumbAwareAction {
 
     @Override
     public void actionPerformed(final @NotNull AnActionEvent e) {
-        // 1. التعديل من داخل نافذة التفاصيل
         if (panelContext != null) {
             if (!panelContext.isEditing()) {
                 panelContext.toggleEditMode(true);
@@ -68,19 +68,14 @@ public class EditTestCase extends DumbAwareAction {
             return;
         }
 
-        // 2. التعديل من القائمة (JBList)
         if (list != null) {
             List<TestCaseDto> selectedItems = list.getSelectedValuesList();
-
             if (selectedItems.isEmpty()) return;
 
-            // مسار الـ Multi-Edit (تحديد أكثر من عنصر)
             if (selectedItems.size() > 1) {
                 showMultiEditPopup(selectedItems);
-            }
-            // مسار التعديل الفردي العادي
-            else {
-                TestCaseDto targetDto = selectedItems.get(0);
+            } else {
+                TestCaseDto targetDto = selectedItems.getFirst();
                 ViewPanel.show(targetDto, path);
 
                 SwingUtilities.invokeLater(() -> {
@@ -93,10 +88,6 @@ public class EditTestCase extends DumbAwareAction {
         }
     }
 
-    // ==========================================================
-    // منطق الـ Multi-Edit Popups
-    // ==========================================================
-
     private void showMultiEditPopup(List<TestCaseDto> selectedItems) {
         GenericSelectionPopup.show(
                 "Update " + selectedItems.size() + " Test Cases",
@@ -108,10 +99,9 @@ public class EditTestCase extends DumbAwareAction {
                         showPrioritySelectionPopup(selectedItems);
 
                     } else if (selectedField == UpdateField.TITLE) {
-                        showTitleBulkEditPopup(selectedItems); // 🌟 استدعاء شاشة العناوين
+                        showTitleBulkEditPopup(selectedItems);
 
                     } else {
-                        // سنكمل الباقي لاحقاً كما طلبت
                         System.out.println("Selected: " + selectedField.getLabel() + " (To be implemented)");
                     }
                 }
@@ -122,15 +112,12 @@ public class EditTestCase extends DumbAwareAction {
         GenericSelectionPopup.show(
                 "Select Priority",
                 Priority.values(),
-                Priority::name, // أو Priority::name حسب ما تفضله لعرض الاسم
-                p -> p.name().charAt(0),  // أخذ أول حرف كاختصار (مثلاً H لـ High، M لـ Medium)
+                Priority::name,
+                p -> p.name().charAt(0),
                 selectedPriority -> {
-                    // تطبيق الأولوية الجديدة على جميع العناصر المحددة
                     for (TestCaseDto tc : selectedItems) {
                         tc.setPriority(selectedPriority);
                     }
-
-                    // تحديث القائمة في واجهة المستخدم
                     list.repaint();
 
                     // TODO: يمكنك هنا إضافة الاستدعاء الخاص بحفظ التعديلات في قاعدة البيانات
@@ -139,7 +126,6 @@ public class EditTestCase extends DumbAwareAction {
         );
     }
 
-    // 🌟 الشاشة السحرية لتعديل العناوين بالـ Multi-Cursor (تصميم Buttonless)
     private void showTitleBulkEditPopup(List<TestCaseDto> selectedItems) {
         Project project = Config.getProject();
         if (project == null) return;
@@ -152,78 +138,77 @@ public class EditTestCase extends DumbAwareAction {
 
         Document document = EditorFactory.getInstance().createDocument(sb.toString());
         Editor editor = EditorFactory.getInstance().createEditor(document, project);
+
+        EditorColorsScheme scheme = editor.getColorsScheme();
+        scheme.setEditorFontSize(20);
+        scheme.setLineSpacing(2.0f);
+
         EditorSettings settings = editor.getSettings();
         settings.setLineNumbersShown(true);
         settings.setLineMarkerAreaShown(false);
         settings.setFoldingOutlineShown(false);
-        settings.setVirtualSpace(true); // ضروري لدعم الـ Multi-Caret
-        settings.setUseSoftWraps(false); // إجبار التمرير الأفقي (Horizontal Scroll) إذا كان النص طويلاً
-        settings.setAdditionalLinesCount(0); // إزالة المساحة الفارغة في الأسفل
-        settings.setAdditionalColumnsCount(5); // إعطاء مساحة أفقية مريحة للكتابة
+        settings.setVirtualSpace(true);
+        settings.setUseSoftWraps(false);
+        settings.setAdditionalLinesCount(0);
+        settings.setAdditionalColumnsCount(5);
+
+        editor.getContentComponent().getInputMap().put(KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0), "none");
 
         if (editor instanceof EditorEx) {
             ((EditorEx) editor).getGutterComponentEx().registerTextAnnotation(new TextAnnotationGutterProvider() {
                 @Nullable
                 @Override
                 public String getLineText(int line, Editor editor) {
+
                     if (line >= 0 && line < selectedItems.size()) {
-                        String orig = selectedItems.get(line).getTitle();
-                        return orig.length() > 40 ? orig.substring(0, 37) + "..." : orig;
+                        return selectedItems.get(line).getTitle();
                     }
                     return null;
                 }
 
                 @Nullable
                 @Override
-                public String getToolTip(int line, Editor editor) {
-                    return (line >= 0 && line < selectedItems.size()) ? selectedItems.get(line).getTitle() : null;
-                }
+                public String getToolTip(int line, Editor editor) { return null; }
 
                 @Override
-                public EditorFontType getStyle(int line, Editor editor) {
-                    return EditorFontType.ITALIC;
-                }
+                public EditorFontType getStyle(int line, Editor editor) { return EditorFontType.ITALIC; }
 
                 @Nullable
                 @Override
-                public ColorKey getColor(int line, Editor editor) {
-                    return EditorColors.ANNOTATIONS_COLOR;
-                }
+                public ColorKey getColor(int line, Editor editor) { return EditorColors.ANNOTATIONS_COLOR; }
 
                 @Nullable
                 @Override
-                public Color getBgColor(int line, Editor editor) {
-                    return null;
-                }
+                public Color getBgColor(int line, Editor editor) { return null; }
 
                 @Override
-                public List<AnAction> getPopupActions(int line, Editor editor) {
-                    return null;
-                }
+                public List<AnAction> getPopupActions(int line, Editor editor) { return null; }
 
                 @Override
-                public void gutterClosed() {
-                }
+                public void gutterClosed() {}
             });
-
             ((EditorEx) editor).getGutterComponentEx().revalidateMarkup();
         }
 
-        // تصميم الـ Buttonless (محرر فقط بدون نصوص أو أزرار)
         JPanel mainPanel = new JPanel(new BorderLayout());
         mainPanel.add(editor.getComponent(), BorderLayout.CENTER);
-        mainPanel.setPreferredSize(new Dimension(JBUI.scale(700), JBUI.scale(250)));
+
+        JButton saveBtn = new JButton("Save Changes");
+        JPanel bottomPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT));
+        bottomPanel.add(saveBtn);
+        mainPanel.add(bottomPanel, BorderLayout.SOUTH);
+
+        mainPanel.setPreferredSize(new Dimension(JBUI.scale(800), JBUI.scale(350)));
 
         JBPopup popup = JBPopupFactory.getInstance()
                 .createComponentPopupBuilder(mainPanel, editor.getContentComponent())
                 .setTitle("Bulk Edit Titles")
                 .setRequestFocus(true)
-                .setCancelOnClickOutside(true) // السماح بالإغلاق عند النقر بالخارج
+                .setCancelOnClickOutside(true)
                 .setMovable(true)
                 .setResizable(true)
                 .createPopup();
 
-        // منطق الحفظ
         Runnable saveLogic = () -> {
             String[] newTitles = document.getText().split("\n");
             int limit = Math.min(newTitles.length, selectedItems.size());
@@ -236,14 +221,7 @@ public class EditTestCase extends DumbAwareAction {
             popup.closeOk(null);
         };
 
-        // 🌟 منع إضافة أسطر جديدة واستخدام الـ Enter للحفظ مباشرة!
-        new DumbAwareAction() {
-            @Override
-            public void actionPerformed(@NotNull AnActionEvent e) {
-                saveLogic.run();
-            }
-        }.registerCustomShortcutSet(new CustomShortcutSet(
-                KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0)), editor.getContentComponent());
+        saveBtn.addActionListener(e -> saveLogic.run());
 
         popup.addListener(new JBPopupListener() {
             @Override
@@ -257,15 +235,12 @@ public class EditTestCase extends DumbAwareAction {
         popup.showCenteredInCurrentWindow(project);
     }
 
-    // ==========================================================
-    // Enum لتحديد الحقول مع اختصاراتها الدقيقة
-    // ==========================================================
+    @Getter
     public enum UpdateField {
         TITLE("Title", 'T'),
         EXPECTED("Expected Results", 'E'),
         STEPS("Steps", 'S'),
         PRIORITY("Priority", 'P');
-        //SEVERITY("Severity", 's'); // حرف صغير لتفريقه عن Steps /// not here. to be in test run editor
 
         private final String label;
         private final char shortcut;
@@ -275,12 +250,5 @@ public class EditTestCase extends DumbAwareAction {
             this.shortcut = shortcut;
         }
 
-        public String getLabel() {
-            return label;
-        }
-
-        public char getShortcut() {
-            return shortcut;
-        }
     }
 }
